tests/dataset/tpc-ds/compiler/cpp/q38.error
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:143:15: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  143 | auto distinct(auto xs) {
      |               ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:155:26: error: ‘s’ was not declared in this scope
  155 |     std::vector<decltype(s.ss_customer_sk)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:155:43: error: template argument 1 is invalid
  155 |     std::vector<decltype(s.ss_customer_sk)> __items;
      |                                           ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:155:43: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:159:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  159 |       __items.push_back(s.ss_customer_sk);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp: In instantiation of ‘auto distinct(auto:1) [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:154:28:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:145:3: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  145 |   for (auto x : xs) {
      |   ^~~
      |   std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:145:3: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  145 |   for (auto x : xs) {
      |   ^~~
      |   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:146:19: error: ‘contains’ was not declared in this scope
  146 |     if ((!contains(out, x))) {
      |           ~~~~~~~~^~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:164:26: error: ‘c’ was not declared in this scope
  164 |     std::vector<decltype(c.cs_bill_customer_sk)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:164:48: error: template argument 1 is invalid
  164 |     std::vector<decltype(c.cs_bill_customer_sk)> __items;
      |                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:164:48: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:168:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  168 |       __items.push_back(c.cs_bill_customer_sk);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:173:26: error: ‘w’ was not declared in this scope
  173 |     std::vector<decltype(w.ws_bill_customer_sk)> __items;
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:173:48: error: template argument 1 is invalid
  173 |     std::vector<decltype(w.ws_bill_customer_sk)> __items;
      |                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:173:48: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq381350353663/001/prog.cpp:177:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  177 |       __items.push_back(w.ws_bill_customer_sk);
      |               ^~~~~~~~~
